--- a/css/discord.css
+++ b/css/discord.css
@@ -177,6 +177,7 @@
     -o-object-fit: cover;
     object-fit: cover;
     -webkit-user-drag: none;
+    -webkit-mask: url("../img/mask.svg");
     mask: url("../img/mask.svg");
 }
 
