--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,33 @@
     display: none;
     
 }
+
+.organization-tab {
+
+    height: 15%; 
+    width: 20%; 
+    box-shadow: 0 4px 16px 0 rgba(46,204,113,0.2); 
+    padding: 10px; 
+    float: left; 
+    justify-content: space-around; 
+    margin-left: 30px; 
+    border: 1px solid #2ecc71;
+
+}
+
+.organization-name {
+
+    text-align: center;
+    margin-top: 20px;
+
+}
+
+.organization-image {
+
+    display: block; 
+    width: 50px; 
+    height: 50px; 
+    margin: auto;
+    margin-top: 10px;
+
+}
