--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 
 .organization-tab {
 
-    height: 15%; 
-    width: 20%; 
+    height: 250px; 
+    width: 200px; 
     box-shadow: 0 4px 16px 0 rgba(46,204,113,0.2); 
     padding: 10px; 
     float: left; 
@@ -29,16 +29,17 @@
 .organization-name {
 
     text-align: center;
-    margin-top: 20px;
+    margin-top: 50px;
+    font-size: 150%;
 
 }
 
 .organization-image {
 
     display: block; 
-    width: 50px; 
-    height: 50px; 
+    width: 100px; 
+    height: 100px; 
     margin: auto;
-    margin-top: 10px;
+    margin-top: 20px;
 
 }
