--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
     top: 0px;
     transition: top ease 0.5s;
     justify-content: space-around; 
+    margin-top: 15px;
     margin-left: 30px; 
     border: 1px solid #2ecc71;
 
@@ -29,8 +30,15 @@
 .organization-name {
 
     text-align: center;
-    margin-top: 50px;
+    margin-top: 5px;
     font-size: 150%;
+
+}
+
+.organization-description {
+
+    text-align: center;
+    font-size: 75%;
 
 }
 
@@ -40,6 +48,6 @@
     width: 100px; 
     height: 100px; 
     margin: auto;
-    margin-top: 20px;
+    margin-top: 10px;
 
 }
