--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
     height: 250px; 
     width: 200px; 
-    box-shadow: 0 4px 16px 0 rgba(46,204,113,0.2); 
+    box-shadow: 0 4px 20px 0 rgba(46,204,113,0.3); 
     padding: 10px; 
     float: left; 
     position: relative;
@@ -17,7 +17,6 @@
     justify-content: space-around; 
     margin-top: 15px;
     margin-left: 30px; 
-    border: 1px solid #2ecc71;
 
 }
 
@@ -50,4 +49,42 @@
     margin: auto;
     margin-top: 10px;
 
+}
+
+.gradient-border {
+
+    --borderWidth: 3px;
+    background: #1D1F20;
+    position: relative;
+    border-radius: var(--borderWidth);
+
+}
+
+.gradient-border:after {
+
+    content: '';
+    position: absolute;
+    top: calc(-1 * var(--borderWidth));
+    left: calc(-1 * var(--borderWidth));
+    height: calc(100% + var(--borderWidth) * 2);
+    width: calc(100% + var(--borderWidth) * 2);
+    background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+    border-radius: calc(2 * var(--borderWidth));
+    z-index: -1;
+    animation: animatedgradient 3s ease alternate infinite;
+    background-size: 300% 300%;
+
+}
+
+
+@keyframes animatedgradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
